--- a/index_only_class.html
+++ b/index_only_class.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/styles_only_class.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Welcome to ARMY Talk</title>
+    <title>Welcome to Butter Talk</title>
   </head>
   <body>
     <div class="status-bar">
