--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
       <a href="#">Find Butter Talk Account or Password</a>
     </form>
 
+    <div id="no-mobile">
+      <span>Your screen is too big 😭</span>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
       crossorigin="anonymous"
