--- a/more.html
+++ b/more.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/styles.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Friends - Butter Talk</title>
+    <title>More - Butter Talk</title>
   </head>
   <body>
     <div class="status-bar">
@@ -24,19 +24,17 @@
     </div>
 
     <header class="screen-header">
-      <h1 class="screen-header__title">Friends</h1>
+      <h1 class="screen-header__title">More</h1>
       <div class="screen-header__icons">
         <span><i class="fas fa-search fa-lg"></i></span>
         <span><i class="fas fa-music fa-lg"></i></span>
-        <span><i class="fas fa-cog fa-lg"></i></span>
+        <span
+          ><a href="settings.html"><i class="fas fa-cog fa-lg"></i></a
+        ></span>
       </div>
     </header>
 
-    <main class="friends-screen">
-      <a id="friends-display-link" href="#">
-        <i class="fas fa-info-circle"></i> Friends' Names Display
-        <i class="fas fa-chevron-right fa-xs"></i>
-      </a>
+    <main class="main-screen more-screen">
       <div class="user-component">
         <div class="user-component__column">
           <img
@@ -45,34 +43,57 @@
           />
           <div class="user-component__text">
             <h4 class="user-component__title">RM</h4>
-            <!-- <h6 class="user-component__subtitle">상태 메세지</h6>-->
+            <h6 class="user-component__subtitle">+82 1365244💜</h6>
           </div>
         </div>
-        <div class="user-component__column"></div>
+        <div class="user-component__column">
+          <i class="far fa-comment-alt fa-2x"></i>
+        </div>
       </div>
-      <div class="friends-screen__channel">
-        <div class="friends-screen__channel-header">
-          <span>Channel</span>
-          <i class="fas fa-chevron-up fa-xs"></i>
+
+      <div class="icon-row">
+        <div class="icon-row__icon">
+          <i class="far fa-calendar-check"></i><span>Calender</span>
         </div>
-        <div class="user-component">
-          <div class="user-component__column">
-            <img
-              class="user-component__avatar user-component__avatar--sm"
-              src="img/artwork-butter.png"
-            />
-            <div class="user-component__text">
-              <h4 class="user-component__title user-component__title--not-blod">
-                Channel
-              </h4>
+        <div class="icon-row__icon">
+          <i class="far fa-hdd"></i><span>Talk Drive</span>
+        </div>
+        <div class="icon-row__icon">
+          <i class="far fa-smile"></i><span>Emoticons</span>
+        </div>
+        <div class="icon-row__icon">
+          <i class="fas fa-brush"></i><span>Themes</span>
+        </div>
+        <div class="icon-row__icon">
+          <i class="fab fa-bootstrap"></i><span>Account</span>
+        </div>
+        <div class="icon-row__icon">
+          <i class="far fa-comments"></i>
+          <span>Open Chat</span>
+        </div>
+      </div>
+
+      <div class="more-suggestions">
+        <h6 class="more-suggestions__title">Suggestions</h6>
+        <div class="more-suggestions__icons">
+          <a href="https://www.weverse.io/">
+            <div class="more-suggestions__icon">
+              <img
+                class="more-suggestions__icon-image"
+                src="img/icon/weverse.png"
+              />
+              <span class="more-suggestions__icon-text">Weverse</span>
             </div>
-          </div>
-          <div class="user-component__column">
-            <div>
-              <span>2</span>
-              <i class="fas fa-chevron-right fa-xs"></i>
+          </a>
+          <a href="https://www.weverseshop.io/">
+            <div class="more-suggestions__icon">
+              <img
+                class="more-suggestions__icon-image"
+                src="img/icon/weverse-shop.png"
+              />
+              <span class="more-suggestions__icon-text">Weverse Shop</span>
             </div>
-          </div>
+          </a>
         </div>
       </div>
     </main>
@@ -81,7 +102,7 @@
       <ul class="nav__ul">
         <li class="nav__btn">
           <a class="nav__link" href="friends.html"
-            ><i class="fas fa-user fa-2x"></i
+            ><i class="far fa-user fa-2x"></i
           ></a>
         </li>
         <li class="nav__btn">
@@ -103,10 +124,6 @@
         </li>
       </ul>
     </nav>
-
-    <div id="splash-screen">
-      <img src="img/artwork-butter.png" />
-    </div>
 
     <div id="no-mobile">
       <span>Your screen is too big 😭</span>
