m_cf_text_again

--- a/chats.html
+++ b/chats.html
@@ -38,7 +38,7 @@
         ><div class="chats-commercial">
           <div class="chats-commercial__text">
             <h4>BTS X McDonald</h4>
-            <span>5월 27일! 방탄 세트를 만나보세요!</span>
+            <span>The BTS Meal!</span>
           </div>
           <img src="img/cf_macdonald_bts_1500x500.jpeg" />
         </div>
