--- a/more.html
+++ b/more.html
@@ -51,7 +51,7 @@
         </div>
       </div>
 
-      <div class="icon-row">
+      <div class="icon-row more-icons">
         <div class="icon-row__icon">
           <i class="far fa-calendar-check"></i><span>Calender</span>
         </div>
